--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -20,6 +20,7 @@
 @import 'layout/sidebar';
 @import 'layout/forms';
 @import 'layout/articulo-header';
+@import 'layout/articulo-cuerpo';
 
 @import 'components/buttons';
 @import 'components/wrapper';
