--- a/assets/sass/abstracts/_animations.scss
+++ b/assets/sass/abstracts/_animations.scss
@@ -45,17 +45,24 @@
     0%{
         box-shadow: inset 0px 0.01px 0.01px 0.01px black;
         mix-blend-mode: difference;
+        filter: invert(100%);
+        opacity: 1;
     }
+
     1%{
         box-shadow: inset 1px 0.01px 0.01px 0.01px white;
         color: black;
         mix-blend-mode: exclusion;
+        filter: invert(100%);
         opacity: 1;
     }
+
     100%{
         box-shadow: inset 750px 0.01px 0.01px 0.01px white;
         color: black;
         mix-blend-mode: exclusion;
+        filter: invert(100%);
+        opacity: 1;
     }
 }
 
