--- a/assets/sass/abstracts/_animations.scss
+++ b/assets/sass/abstracts/_animations.scss
@@ -82,3 +82,27 @@
         font-weight: 600;
     }
 }
+
+//descripcion galeria
+@keyframes descripcion__hover{
+    0% {
+        width: 0%;
+        opacity: 1;
+    } 
+    100%{
+        width: 100%;
+        opacity: 1;
+    }
+}
+
+@keyframes descripcion__hoverTexto{
+    0%{
+        opacity: 0;
+    }
+    1%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 1;
+    }
+}
