--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10859,7 +10859,7 @@ main {
 }
 
 .articulo__header-fondo {
-  background: url(/assets/img/Graduadisimo-campeon-color.png) black;
+  background: url(assets/img/Graduadisimo-campeon-color.png) black;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -11267,7 +11267,7 @@ main {
 
 @media (min-width: 768px) {
   .sobremi__hero {
-    background: url(/assets/img/Graduadisimo-campeon-color.png) black;
+    background: url(assets/img/fotoportada.png) black;
     background-position: 80% 50%;
     background-repeat: no-repeat;
     background-size: contain;
