--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11267,7 +11267,7 @@ main {
 
 @media (min-width: 768px) {
   .sobremi__hero {
-    background: url(../../../assets/img/fotoportada.png) black;
+    background: url("../../../assets/img/fotoportada.png") black;
     background-position: 80% 50%;
     background-repeat: no-repeat;
     background-size: contain;
