--- a/assets/sass/pages/_sobre-mi.scss
+++ b/assets/sass/pages/_sobre-mi.scss
@@ -71,7 +71,7 @@
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
     .sobremi__hero{
-        background: url('../../../assets/img/fotoportada.png') black;
+        background: url('/assets/img/fotoportada.png') black;
         background-position: 80% 50%;
         background-repeat: no-repeat;
         background-size: contain;
