--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -25,6 +25,7 @@
 @import 'components/buttons';
 @import 'components/wrapper';
 @import 'components/panel';
+@import 'components/modales';
 @import 'components/carousel';
 @import 'components/cover';
 @import 'components/dropdown';
