--- a/assets/sass/pages/_diseno-grafico.scss
+++ b/assets/sass/pages/_diseno-grafico.scss
@@ -18,3 +18,53 @@
         object-fit: fill;
     }
 }
+
+.galeria__disenografico{
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
+}
+
+.primerslide{
+    position: relative;
+}
+
+.primerslide__info{
+    background-color: black;
+    padding: 20px;
+    position: absolute;
+    right: 2%;
+    top: 10%;
+    width: 25%;
+  }
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+    .galeria__disenografico{
+        -webkit-column-count: 2;
+        -moz-column-count: 2;
+        column-count: 2;
+    }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+    .galeria__disenografico{
+        -webkit-column-count: 3;
+        -moz-column-count: 3;
+        column-count: 3;
+    }
+
+    .primerslide__info{
+        top: 20%;
+        width: 25%;
+      }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+    .primerslide__info{
+        top: 12%;
+        width: 25%;
+      }
+}
