--- a/assets/sass/pages/_ilustracion.scss
+++ b/assets/sass/pages/_ilustracion.scss
@@ -1,3 +1,37 @@
 #panel__fijo-ilustracion{
     background: black;
 }
+
+
+.galeria__ilustracion{
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+    .galeria__ilustracion{
+        -webkit-column-count: 2;
+        -moz-column-count: 2;
+        column-count: 2;
+    }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+    .galeria__ilustracion{
+        -webkit-column-count: 3;
+        -moz-column-count: 3;
+        column-count: 3;
+    }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+    .galeria__ilustracion{
+        -webkit-column-count: 4;
+        -moz-column-count: 4;
+        column-count: 4;
+    }
+}
