--- a/assets/sass/abstracts/_animations.scss
+++ b/assets/sass/abstracts/_animations.scss
@@ -45,6 +45,28 @@
     0%{
         box-shadow: inset 0px 0.01px 0.01px 0.01px black;
         mix-blend-mode: difference;
+        opacity: 1;
+    }
+
+    1%{
+        box-shadow: inset 1px 0.01px 0.01px 0.01px white;
+        color: black;
+        mix-blend-mode: exclusion;
+        opacity: 1;
+    }
+
+    100%{
+        box-shadow: inset 750px 0.01px 0.01px 0.01px white;
+        color: black;
+        mix-blend-mode: exclusion;
+        opacity: 1;
+    }
+}
+
+@keyframes hover__botones-trabajos{
+    0%{
+        box-shadow: inset 0px 0.01px 0.01px 0.01px black;
+        mix-blend-mode: difference;
         filter: invert(100%);
         opacity: 1;
     }
