--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -127,10 +127,10 @@
     }*/
     &:hover{
 
-        -moz-animation: hover__botones-light;
-        -webkit-animation: hover__botones-light;
-        -o-animation: hover__botones-light;
-        animation: hover__botones-light;
+        -moz-animation: hover__botones-trabajos;
+        -webkit-animation: hover__botones-trabajos;
+        -o-animation: hover__botones-trabajos;
+        animation: hover__botones-trabajos;
 
         animation-duration:  0.5s;
         animation-timing-function: ease;
